# online-chess

./: README.md
.github/workflows/: rust.yml
crates/backend/: Cargo.toml
crates/backend/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: http.rs  lib.rs  ws.rs
crates/common/src/ws/: axum.rs  message.rs  new_types.rs  reqwasm.rs
crates/frontend/: Cargo.toml  Trunk.toml  index.html
crates/frontend/src/: components.rs  main.rs
crates/frontend/src/component/: game.rs  menu.rs
crates/frontend/src/components/: board.rs  host.rs  ingame.rs  join.rs  menu.rs  waiting_for_opponent.rs
crates/proc_macros/: Cargo.toml
crates/proc_macros/src/: lib.rs
frontend/: game.html
frontend/assets/: game.css  game.js
