[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", optional = true, default-features = false, features = [
    "ws",
] }
chess = "3.2.0"
reqwasm = { version = "0.5.0", optional = true }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
uuid = { version = "1.3.0", features = ["serde"] }
