[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common", features = ["reqwasm"] }
log = "0.4.17"
serde = { version = "1.0.159", features = ["derive"] }
uuid = "1.3.0"
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
web-sys = "0.3.61"
yew = { version = "0.20.0", features = ["csr"] }
reqwasm = "0.5.0"
yew-router = "0.17.0"
futures = "0.3.28"
cozy-chess = "0.3.2"
